src/components/Collapse/index.scss
.collapse{    
    position: relative;
    width: 100%;

    .topbar{
        display: flex;
        padding: 10px 20px 10px 15px;
        align-items: center;
        border-radius: 5px;
        background: var(--Red, #FF6060);
        
        @media screen and (min-width: 375px) and (max-width: 768px) {
            padding: 10px;
        }
    

        .collapsetitle{
            display: flex;
            flex-direction: column;
            justify-content: center;
            flex: 1 0 0;
            align-self: stretch;
            color: #FFF;
            font-family: Montserrat;
            font-size: 24px;
            font-style: normal;
            font-weight: 700;
            line-height: 142.6%; /* 34.224px */

            @media screen and (min-width: 375px) and (max-width: 768px) {
                font-size: 13px;
            }
        }

        #arrow{
            width: 32px;
            height: 32px;
            flex-shrink: 0;
            rotate:-180deg;
            @media screen and (min-width: 375px) and (max-width: 768px) {
                width: 25px;
                height: 25px;
            }
        }

        //Animations de la flèche au clic
        @keyframes ArrowUptoDown {
            from {
                transform: rotate(0deg); 
            }
            to {
                transform: rotate(180deg); 
            }
        }

        .updown {
            animation: ArrowUptoDown 0.5s ease forwards; 
        }

        @keyframes ArrowDowntoUp {
            from {
                transform: rotate(180deg); 
            }
            to {
                transform: rotate(0deg); 
            }
        }

        .downup {
            animation: ArrowDowntoUp 0.5s ease forwards; 
        }
    }

    #textcontainer{
        display: flex;
        align-items: flex-start;
        box-sizing: border-box;
        padding: 20px;
        border-radius: 5px 5px 10px 10px;
        background: var(--Gray, rgba(246, 246, 246, 0.45));     
        color: #000;
        font-family: Montserrat;
        font-size: 22px;
        font-style: normal;
        font-weight: 400;
        line-height: 142.6%; /* 25.668px */
        overflow: hidden;
        flex-direction: column;

        @media screen and (min-width: 375px) and (max-width: 768px) {
            font-size: 12px;
            padding: 15px;
        }

        li{
            list-style: none;
        }
    }

    //Animations de l'apparition du texte'
     @keyframes ShowText {
        from {
            height:0; 
            padding: 0;
        }
        to {
            height:auto;
            padding: 20px;
        }
    }
    .showtext {
            animation: ShowText 0.3s ease forwards;        
    }

    @keyframes HideText {
        from {
            height:auto;
            padding: 20px;

        }
        to {
            height:0; 
            padding: 0;    
        }
    }
    .hidetext {
            animation: HideText 0.3s ease forwards;        
    }
    
}

//classespour gérer la taille du composant collapse, utilisé avec la prop Size
// .large{
//     width: 1024px;
// }
// .medium{
//     width: 582px;
// }
// .small{
//     width: 335px;
// }

